@@ -1,3 +1,3 @@
 [submodule "rti_python"]
 	path = rti_python
-	url = https://ricorx7@github.com/ricorx7/rti_python
+	url = https://rowetechinc@github.com/rowetechinc/rti_python
