@@ -25,7 +25,7 @@ class PredictorVM(predictor_view.Ui_RoweTechPredictor):
         self.calc_data = 0.0
         self.calc_num_batt = 0.0
 
-        self.revLabel.setText("© RoweTech Inc. Rev 1.9")
+        self.revLabel.setText("© RoweTech Inc. Rev 1.10")
 
         # Connect the buttons
         self.addSubsystemButton.clicked.connect(self.add_subsystem)
@@ -171,34 +171,34 @@ class PredictorVM(predictor_view.Ui_RoweTechPredictor):
 
         for tab in range(self.tabSubsystem.count()):
             if self.dataFormatComboBox.currentText() == "RTB":
-                self.tabSubsystem.widget(tab).cedBeamVelCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedInstrVelCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedEarthVelCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedAmpCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedCorrCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedBeamGoodPingCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedEarthGoodPingCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedEnsCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedAncCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedBtCheckBox.setDisabled(False)
-                self.tabSubsystem.widget(tab).cedNmeaCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedBeamVelCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedInstrVelCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedEarthVelCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedAmpCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedCorrCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedBeamGoodPingCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedEarthGoodPingCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedEnsCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedAncCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedBtCheckBox.setDisabled(False)
+                #self.tabSubsystem.widget(tab).cedNmeaCheckBox.setDisabled(False)
                 self.tabSubsystem.widget(tab).cedWpEngCheckBox.setDisabled(False)
                 self.tabSubsystem.widget(tab).cedBtEngCheckBox.setDisabled(False)
                 self.tabSubsystem.widget(tab).cedSysSettingCheckBox.setDisabled(False)
                 self.tabSubsystem.widget(tab).cedRangeTrackingCheckBox.setDisabled(False)
             else:
-                self.tabSubsystem.widget(tab).cedBeamVelCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedBeamVelCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedInstrVelCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedEarthVelCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedAmpCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedCorrCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedBeamGoodPingCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedEarthGoodPingCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedEnsCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedAncCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedBtCheckBox.setDisabled(True)
-                self.tabSubsystem.widget(tab).cedNmeaCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedBeamVelCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedBeamVelCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedInstrVelCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedEarthVelCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedAmpCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedCorrCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedBeamGoodPingCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedEarthGoodPingCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedEnsCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedAncCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedBtCheckBox.setDisabled(True)
+                #self.tabSubsystem.widget(tab).cedNmeaCheckBox.setDisabled(True)
                 self.tabSubsystem.widget(tab).cedWpEngCheckBox.setDisabled(True)
                 self.tabSubsystem.widget(tab).cedBtEngCheckBox.setDisabled(True)
                 self.tabSubsystem.widget(tab).cedSysSettingCheckBox.setDisabled(True)
